@@ -127,6 +127,10 @@ wxMSW:
 - Fixed infinite loop in wxThread::Wait() in console applications.
 - Return the restored window size from GetSize() when window is minimized.
 
+wxX11:
+
+- Added mouse wheel support (David Hart)
+
 
 2.8.4
 -----
